# curriculus

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
examples/: 01_easy_medium_hard.ipynb  02_ultrachat_bucket_autoschedule.ipynb
scripts/: publish.py
src/curriculus/: __init__.py  dataset.py  planner.py
tests/: test_dataset.py  test_planner.py
